fix: revert overflow hidden

--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,1 @@
-x-vue-echarts{display:block;width:100%;height:100%;overflow:hidden}
+x-vue-echarts{display:block;width:100%;height:100%}
